--- a/product-microservices-dev.properties
+++ b/product-microservices-dev.properties
@@ -1,4 +1,2 @@
-product.property= Booking Profile Dev
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.generate-ddl=true
+product.property=Product Profile Dev
+
